<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云记账</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="Record">记一笔</string>
    <string name="AccountBook">账本</string>
    <string name="AccountLabel">标签</string>
    <string name="More">更多</string>
    
    <string name="money">请输入金额</string>
    <string name="income">收入</string>
    <string name="expend">支出</string>
    
    <string name="my_canlendar">日历</string>
    <string name="my_clock">时钟</string>
    <string name="my_canlendar_text">2015-05-14</string>
    <string name="my_clock_text">09:40</string>
    
    <string name="cart">购物</string>
    <string name="game">游戏</string>
    <string name="house">租房</string>
    <string name="learn">学习</string>
    <string name="metro">地铁</string>
    <string name="recreation">运动</string>
    <string name="tel">话费</string>
    <string name="travel">旅游</string>
    <string name="video">电影</string>
    
    <string name="remark">备注:</string>
    <string name="remark_hint">输入说明</string>
    <string name="add_account">添加</string>
    
    <!-- Toast -->
    <string name="toast_added_suc">添加成功</string>
    <!-- Toast ends -->
    
    <string name="forms">报表</string>
    <string name="my_date">2015年5月14日</string>
    <string name="expend_total">支出总额 ¥520</string>
    <string name="income_total">收入总额 ¥520</string>
    <string name="record_count">记录数 1</string>
    <string name="account_details">记账详情</string>
    <string name="editing">编辑</string>
    <string name="delete">删除</string>
</resources>
