<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical" >
    <TextView 
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:text="@string/my_date"/>
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/expend_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:text="@string/expend_total"/>
        <TextView 
            android:id="@+id/income_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/expend_total"
            android:text="@string/income_total"/>
        <TextView 
            android:id="@+id/record_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/gray"
            android:layout_marginRight="10dp"
            android:text="@string/record_count"/>
    </RelativeLayout>

</LinearLayout>
