<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="80dp"
	    android:baselineAligned="false"
	    android:orientation="horizontal">
		<LinearLayout 
		    android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:padding="10dp"
	        android:layout_weight="1"
	        android:orientation="vertical">
	    <EditText
	        android:id="@+id/money"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:paddingLeft="10dp"
	        android:background="@drawable/bg_edittext"
	        style="@style/BaseFontStyle"
	        android:inputType="number"
	        android:hint="@string/money" />
	    </LinearLayout>

	    <LinearLayout 
	        android:id="@+id/InOrOut_layout"
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:orientation="vertical"
	    	android:layout_marginRight="10dp"
	    	android:gravity="center_vertical"
	    	android:layout_weight="4">
	        <TextView 
		        android:id="@+id/income_text"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="1dp"
		        android:padding="5dp"
		        android:gravity="center"
		        android:background="@drawable/bg_textview_top"
		        android:text="@string/income"/>
	        <TextView 
		        android:id="@+id/expend_text"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="5dp"
		        android:gravity="center"
		        android:background="@drawable/bg_textview_bottom"
		        android:text="@string/expend"/>
	    </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_date_layout">
        <LinearLayout 
            android:id="@+id/my_calendar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="1dp"
            android:background="@drawable/bg_view"
            android:layout_weight="1">
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar"
                android:contentDescription="@string/my_canlendar"/>
            <TextView 
                android:id="@+id/my_calendar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:text="@string/my_canlendar_text"
                />
        </LinearLayout>
        <View 
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/lightgray"/>
        <RelativeLayout 
            android:id="@+id/my_clock_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="@drawable/bg_view"
            android:layout_weight="1">
            <ImageView 
                android:id="@+id/my_clock_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/clock"
                android:contentDescription="@string/my_canlendar"/>
            <TextView 
                android:id="@+id/my_clock_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:layout_toLeftOf="@id/my_clock_image"
                android:text="@string/my_clock_text"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="170dp"
        >
	    <GridView 
	        android:id="@+id/label_gridview"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:numColumns="auto_fit"
	        android:columnWidth="70dp"
	        android:stretchMode="columnWidth"
	        android:listSelector="@android:color/transparent"
	        android:verticalSpacing="5dp"
	        android:horizontalSpacing="5dp"
	        />
	</LinearLayout>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    <Button 
	        android:id="@+id/add_btn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:background="@drawable/bg_btn"
	        android:textSize="18sp"
	        android:textColor="@color/black"
	        android:padding="10dp"
	        android:text="@string/add_account"/>
	    <LinearLayout 
	        android:layout_above="@id/add_btn"
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:padding="1dp"
	    	android:orientation="horizontal"
	    	android:background="@drawable/bg_edit_layout">
		    <TextView 
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:padding="10dp"
		    	android:textSize="14sp"
		    	android:textColor="@color/black"
		    	android:text="@string/remark"/>
		    <EditText 
		        android:layout_width="match_parent"
		    	android:layout_height="match_parent"
		    	android:lines="5"
		    	android:gravity="top"
		    	android:padding="10dp"
		    	android:textSize="14sp"
		    	android:hint="@string/remark_hint"
		    	android:inputType="text"
		    	android:background="@drawable/bg_edittext"/>
	    </LinearLayout>
	</RelativeLayout>
</LinearLayout>
