<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/lllayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_background"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/Record_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/Record"
                android:textColor="@color/blue"
                android:textSize="@dimen/BasetextSize" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_background"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:saveEnabled="false" >

            <TextView
                android:id="@+id/accountBook_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/AccountBook"
                android:textColor="@color/black"
                android:textSize="@dimen/BasetextSize" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_background"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:saveEnabled="false" >

            <TextView
                android:id="@+id/accountLabel_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/AccountLabel"
                android:textColor="@color/black"
                android:textSize="@dimen/BasetextSize" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_background"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:saveEnabled="false" >

            <TextView
                android:id="@+id/more_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/More"
                android:textColor="@color/black"
                android:textSize="@dimen/BasetextSize" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
