<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    <RelativeLayout 
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:orientation="horizontal"
        >
        <Button 
            android:id="@+id/back_btn"
            android:layout_centerVertical="true"
            style="@style/back_btn"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/account_details"
            style="@style/WhiteFontStyle"/>
    </RelativeLayout>
    
    <LinearLayout 
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="图标"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="备注:图标备注"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="收入:¥66"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2015年5月13日 18:05"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="默认账本"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_below="@id/content"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="20dp"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:padding="1dp"
    	android:orientation="horizontal"
    	android:background="@drawable/bg_edit_layout">
	    <TextView 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:padding="10dp"
	    	android:textSize="14sp"
	    	android:textColor="@color/black"
	    	android:text="@string/remark"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/lightgray"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/delete_record"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:background="@drawable/bg_btn"
	        android:textSize="18sp"
	        android:textColor="@color/black"
	        android:padding="10dp"
	        android:layout_margin="1dp"
	        android:text="@string/delete"/>
        <View 
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#CCCCCC"/>
        <Button 
            android:id="@+id/editing"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_margin="1dp"
	        android:background="@drawable/bg_btn"
	        android:textSize="18sp"
	        android:textColor="@color/black"
	        android:padding="10dp"
	        android:text="@string/editing"/>
    </LinearLayout>

</RelativeLayout>
